[package]
name = "secure_resume"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
nanoid = "0.4"
log = "0.4"
once_cell = "1.19"

